# AI-Tutor

./: .gitignore  README.md  pyproject.toml
docs/: AI Tutor.docx  AI-tutor_pres.pptx  architecture.md
src/: Home.py  aitutor_uva_api.py  config.py
src/assistant/: __init__.py  create_assitant.py  model.py
src/assistant/instructions/: debug_helper.txt  feedbackbot.txt  socratic_with_hints.txt
src/pages/: 00_Help.py  01_Debug.py  02_Feedback.py
