[tool.poetry]
name = "ai-tutor"
version = "0.1.0"
description = ""
authors = ["Matias Tolppanen <matias.tolppanen@outlook.com>"]
readme = "README.md"
packages = [{include = "ai_tutor"}]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
streamlit = "^1.38.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.7"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
